--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MyFinalProject</title>
+  <title>TweetSmithy</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+    <div id="container>"
+        <div id="user_nav">
+            <% if current_user %>
+          Signed in as <%= current_user.name %>!
+              <%= link_to "Sign out", signout_path %>
+            <% else %>
+             <%= link_to "Sign in with Twitter", "/auth/twitter" %>
+            <% end %>
+    </div>
+    <%= yield %>
+  </div>
 </body>
 </html>
