--- a/app/views/Smithy/index.html.erb
+++ b/app/views/Smithy/index.html.erb
@@ -5,11 +5,12 @@
 <body>
     <div>
       <center>
-        <h1> Anvil </h1>
+        <h1> TweetSmithy </h1>
       <p>
         <%= form_tag "/search", method: "GET" do %>
-            Start Smithing:
-        <%= text_field_tag :search_word %>
+            Your Anvil:
+        <%= original_tweet = text_field_tag :search_word, "Type your tweet here...", size: 75 %>
+
         <%= submit_tag "get those synonyms" %>
     <% end %>
     </p>
@@ -17,7 +18,6 @@
     </div>
    <%= yield %>
 <br/><br/>
-
 
 
 
