--- a/app/views/wordnik/search.html.erb
+++ b/app/views/wordnik/search.html.erb
@@ -1,1 +1,7 @@
-<%= debug @words %>
+
+<%= @original_tweet %>
+
+<% @words.each do |key, value| %>
+<p><%= "The word #{key}: has the following synonyms:" %></p>
+<font color="red"><table><%= "#{value}" %></table></font>
+<% end %>
