--- a/app/views/Smithy/index.html.erb
+++ b/app/views/Smithy/index.html.erb
@@ -9,8 +9,7 @@
       <p>
         <%= form_tag "/search", method: "GET" do %>
             Your Anvil:
-        <%= original_tweet = text_field_tag :search_word, "Type your tweet here...", size: 75 %>
-
+        <%= text_field_tag :search_word, "Type your tweet here...", size: 75 %>
         <%= submit_tag "get those synonyms" %>
     <% end %>
     </p>
