tweet button, so close

--- a/app/views/wordnik/search.html.erb
+++ b/app/views/wordnik/search.html.erb
@@ -1,15 +1,22 @@
 
+<h3><%= "Your original tweet:" %></h3>
+<p><center><%= params[:search_word] %></center></p>
+
+<p>
+  <%= form_for :tweet, url: tweets_path, method: :post do |f| %>
+    <%= f.text_field :message, size: 150 %>
+    <%= f.submit "Send New Tweet" %> 
+  <% end %>
+</p>
 
 <% @words.each do |key, value| %>
-<p><%= "The word #{key}: has the following synonyms:" %></p>
-<font color="red"><table><%= "#{value}" %></table></font>
+<p><%= "The word '#{key}': has the following synonyms:" %></p>
+<font color="red"><%= "#{value}" %></font>
 <% end %>
 
 
-<!--<% if !current_user.nil? %>
- <%= form_for(@tweeting) do |tweet_form| %> 
-  <%= text_form.text_area :tweet_content, :id => "tweet" %>
-  <%= tweet_form.submit "Tweet" %>
-  <% else %>
-    <p>You must log in to send a tweet.</p>
-<% end %>-->
+
+
+
+
+
