commit before messing with controllers

--- a/app/views/wordnik/search.html.erb
+++ b/app/views/wordnik/search.html.erb
@@ -8,7 +8,7 @@
 
 <p>
   <%= form_tag tweet_path do %>
-    <%= text_field_tag :message, size: 150 %>
+    <%= text_field_tag :message, "Send new tweet", :size => 150 %>
     <%= submit_tag "Send New Tweet" %> 
   <% end %>
 </p>
