please please please please

--- a/app/views/wordnik/search.html.erb
+++ b/app/views/wordnik/search.html.erb
@@ -10,6 +10,7 @@
   <%= form_tag tweet_path do %>
     <%= text_field_tag :message, "Send new tweet", :size => 150 %>
     <%= submit_tag "Send New Tweet" %> 
+    <%#= button_to "Create", action: tweet %> 
   <% end %>
 </p>
 
