add navbar and padding

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
           <p>
             TweetSmithy automates this process by providing shorter synonyms, related words and abbreviations. It will point out passive voice and suggest you make it active. 
           </p>
-        <header class =div id="user_nav">
+        <header class ="navbar navbar-fixed top navbar-inverse">
+          <div class="navbar-inner">
+            <div class="container">
             <% if current_user %>
           Signed in as <%= current_user.name %>!
               <%= link_to "Sign out", signout_path %>
