colors change to navbar

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -56,3 +56,10 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
+.navbar {
+  .navbar-inner {
+    background-color: #8FAFBA;
+    background-image: none;
+  }
+}
