--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,6 @@
         <p>
 
 
-
-
-
         </p>
           <h4>
             What is the Smithy?
@@ -47,10 +44,13 @@
             TweetSmithy aims to simplify and automate the wordsmithing that occurs while livetweeting events. 
           </p>
             <p>
-              <em>Imagine this</em>, while attending a presentation at conference the presenter drops a brilliant oneliner perfect for your Twitter followers. Your fingers quickly type out the quote while attempting to pay attention to the presentation. "Oh no!" That perfect quote is a hundred characters over! So you start paring down words and abbreviating others, hoping to avoid switching 'are' to 'r'. You switch a comma and spaces to an em dash. The tweet finally fits, but the presenter is onto the next topic and you missed the introduction as you frantically edited. 
+              <em>Imagine this</em>, while attending a presentation at a conference the presenter drops a brilliant one-liner and you know it's the perfect quip to tweet to your followers. Your fingers quickly type the quote while still attempting to pay attention to the presentation. 
+            </p>
+            <p>
+              "Oh no!" That perfect quote is a hundred characters over! So you start paring down words and abbreviating others while hoping you can avoid switching 'are' to 'r'. The tweet finally fits, but the presenter is already onto the next topic and you missed the introduction as you frantically edited that one quote. 
           </p>
           <p>
-            TweetSmithy automates this process by providing shorter synonyms, related words and abbreviations. It will point out passive voice and suggest you make it active. 
+            TweetSmithy automates this process by providing synonyms, related words and abbreviations. Future versions will only provide synonyms that are shorter than the original word, as well as provide shorter hypernyms (color is a hypernym of red) and hyponyms (spoon is a hyponym of cutlery), point out the use of passive voice, and offer single word substitutions for idioms and phrases. 
           </p>
         
     </div>
