--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
               "Oh no!" That perfect quote is a hundred characters over! So you start paring down words and abbreviating others while hoping you can avoid switching 'are' to 'r'. The tweet finally fits, but the presenter is already onto the next topic and you missed the introduction as you frantically edited that one quote. 
           </p>
           <p>
-            TweetSmithy automates this process by providing synonyms, related words and abbreviations. Future versions will only provide synonyms that are shorter than the original word, as well as provide shorter hypernyms (color is a hypernym of red) and hyponyms (spoon is a hyponym of cutlery), point out the use of passive voice, and offer single word substitutions for idioms and phrases. 
+            TweetSmithy automates this process by providing synonyms, related words and abbreviations. Future versions will only provide synonyms that are shorter than the original word, as well as provide shorter hypernyms and hyponyms, point out the use of passive voice, and offer single word substitutions for idioms and phrases. 
           </p>
         
     </div>
