--- a/app/views/smithy/index.html.erb
+++ b/app/views/smithy/index.html.erb
@@ -8,7 +8,7 @@
         <h1> TweetSmithy </h1>
       <p>
         <%= form_tag "/search", method: "GET" do %>
-        <%= text_field_tag :search_word, "This is your anvil—type your tweet here.", size: 150 %>
+        <%= text_field_tag :search_word, "This is your anvil—type your tweet here.", size: 150, class: "form-control" %>
         <input class="btn btn-default" type="submit" value="Submit"></button>
         <%#= submit_tag "get those synonyms" %>
     <% end %>
