--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>TweetSmithy</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+<!--   < %= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  < % = javascript_include_tag "application", "data-turbolinks-track" => true %> -->
   <%= csrf_meta_tags %>
 </head>
 
 
 <body>
-    
+
       <div class="container">
       <header class="navbar navbar-fixed top navbar-inverse">
           <div class="navbar-inner">
