Add logic to parse the length of words/smybols/synoyms and handle empty results

--- a/app/views/smithy/index.html.erb
+++ b/app/views/smithy/index.html.erb
@@ -5,10 +5,14 @@
     <%= form_tag "/search", method: "GET" do %>
       <%= text_field_tag :search_word, "This is your anvil—type your tweet here.", size: 150, class: "form-control" %>
       <input class="btn btn-default" type="submit" value="Submit"></button>
-      <%#= submit_tag "get those synonyms" %>
     <% end %>
   </p>
 </div>
+
+<%= @words %>
+
+
+
 <h4>What is the Smithy?</h4>
 
 <p>TweetSmithy aims to simplify and automate the wordsmithing that occurs while livetweeting events.</p>
